Fixed minor issue/typo

--- a/TradingBot.ipynb
+++ b/TradingBot.ipynb
@@ -409,7 +409,7 @@
         "    results = {indicator: {'predictions': [], 'actual': [], 'daily_mae': [], 'train_mae': []}\n",
         "           for indicator in indicators if indicator != 'Previous_Close'}\n",
         "\n",
-        "    for indicator in indicators[:-1]:\n",
+        "    for indicator in indicators:\n",
         "        for i in range(window_size, len(df_segment) - 1):\n",
         "            train_df = df_segment.iloc[i - window_size:i]\n",
         "            test_index = i + 1\n",
